corrigin erro da laura

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,19 +1,19 @@
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
-}
-
 :root{
     --light-lilac: #f2e9eb;
     --lilac: #d4c7d9;
     --dark-lilac: #bf73ba;
-    --midium-purple: #7d3a7f;
+    --medium-purple: #7d3a7f;
     --dark-purple: #5b3873;
     --white: #ffffff;
     --yellow-joy: #f2ce11;
     --blue-sky: #30acec;
     --orange-children: #ff9a24;
     --gray: #726e73;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
 }
