--- a/styles/home.css
+++ b/styles/home.css
@@ -9,14 +9,8 @@
     background-color:white;
 }
 
-.titulo-section-projetos{
+#projetos h2{
     text-align: center;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 36px;
-    line-height: 72px;
-    color:var(--dark-purple);
 }
 
 .title-colonia-de-ferias {
