--- a/styles/importancia.css
+++ b/styles/importancia.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     /* align-items: center; */
 
     gap: 30px;
