--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,7 @@ header {
   align-items: center;
   justify-content: space-between;
 
+  width: 100%;
   height: 150px;
   padding: 40px 175px 40px 175px;
 
@@ -12,15 +13,22 @@ header {
 /* Logo */
 .logo{
   cursor: pointer;
+  margin: 1rem;
+}
+
+.hamburger {
+  display: none;
 }
 
 /* Menu */
-.menu {
+.menu ul {
   display: flex;
+  align-items: center;
   gap: 3.2rem;
 }
 
-.menu a {
+.menu ul li a {
+  display: block;
   font-size: 20px;
   font-weight: 500;
   color: var(--medium-purple);
@@ -34,17 +42,75 @@ header nav a.active {
 }
 
 /* Botão */
-.button {
-  padding: 8px 16px;
-  background-color: var(--medium-purple);
-  color: #fff;
-  border: none;
+button {
   border-radius: 10px;
-  font-weight: 600;
-  padding: 12px 35px;
-  cursor: pointer;
 }
 
-.button:hover{
-  filter: brightness(0.9);
+@media only screen and (max-width: 1550px) {
+  header {
+    padding: 0 50px;
+  }
+}
+
+@media only screen and (max-width: 1270px) {
+ .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+
+  .hamburger .line {
+    width: 30px;
+    height: 3px;
+    margin: 6px 0;
+    background: var(--dark-purple);
+  }
+
+  .hamburgerActive {
+    display: flex;
+    gap: 0.375rem;
+  }
+  
+  .hamburgerActive .line {
+    width: 3px;
+    height: 30px;
+    margin: 6px 0;
+    background: var(--dark-purple);
+  }
+
+  .menu {
+    position: absolute;
+    top: 150px;
+    left: 0;
+    right: 0;
+
+    height: 0px;
+    width: 100vw;
+
+    background: var(--white);
+    transition: 0.2s;
+
+    overflow: hidden;
+  }
+
+  .menu.active {
+    height: 500px;
+  }
+  
+  .menu ul {
+    display: block;
+    width: fit-content;
+    margin: 80px auto 0 auto;
+    text-align: center;
+    transition: 0.5s;
+
+    opacity: 0;
+  }
+  
+  .menu.active ul {
+    opacity: 1;
+  }
+
+  .menu ul li a {
+    margin-bottom: 40px;
+  }
 }
