--- a/styles/como_ajudar.css
+++ b/styles/como_ajudar.css
@@ -57,6 +57,12 @@ p {
     text-align: right;
 }
 
+#doacoes-conteudo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #contato {
     display: flex;
     justify-content: center;
@@ -69,11 +75,11 @@ p {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 41px 36px;
-    gap: 30px;
+    padding: 30px;
+    gap: 10px;
 
-    width: 908.01px;
-    height: 199.49px;
+    width: 910px;
+    height: 200px;
 
     background: white;
     border: 1.78918px solid var(--dark-purple);
