--- a/styles/home/parcerias.css
+++ b/styles/home/parcerias.css
@@ -16,7 +16,7 @@
     margin-bottom: 70px;
 }
 
-#parcerias>div{
+#parcerias>div:nth-of-type(1){
     display: flex;
     flex-direction: column;
     align-items: center;
