--- a/styles/como_ajudar.css
+++ b/styles/como_ajudar.css
@@ -33,7 +33,7 @@ button {
     border-radius: 50px;
 }
 
-p {
+p{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -69,31 +69,15 @@ p {
     align-items: center;
 }
 
-.contato-card {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px;
-    gap: 10px;
-
-    width: 910px;
-    height: 200px;
-
-    background: white;
-    border: 1.78918px solid var(--dark-purple);
-    border-radius: 22.3648px;
-}
-
-.contato-card h5{
-    font-family: 'Poppins';
+.meios-de-contatos li{ 
+    font-family: 'Roboto';
     font-style: normal;
-    font-weight: 800;
-    color:var(--dark-purple);
+    font-weight: 400;
+    font-size: 1.2rem;
+    color: var(--dark-purple);
+    text-decoration: none;
 }
 
-.meios-de-contatos{
-    text-align: center;
-    color: var(--dark-purple);
+.meios-de-contatos a{ 
+    text-decoration: none;
 }
