--- a/styles/home/projetos.css
+++ b/styles/home/projetos.css
@@ -11,12 +11,15 @@
     margin-bottom: 85px;
 }
 
-#projetos-conteudo{
+#projetos-conteudo {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
+}
+
+#projetos-conteudo + #projetos-conteudo {
+    margin-top: 10rem;
 }
 
 #projetos-conteudo button{
@@ -61,4 +64,11 @@
 
 .botao-apoie-colonia:hover, .botao-apoie-aniversario:hover {
     background-color: var(--medium-purple);
+}
+
+@media only screen and (max-width: 768px) {
+    #projetos-conteudo img{
+       width: 400px;
+       height: 355px;
+    }
 }
