--- a/styles/home/parcerias.css
+++ b/styles/home/parcerias.css
@@ -13,12 +13,30 @@
     color: var(--gray);
 
     text-align: center;
-    margin-bottom: 70px;
+    margin-bottom: 50px;
 }
 
-#parcerias>div:nth-of-type(1){
+#parcerias>div:nth-of-type(2){
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 50px;
+}
+
+#parcerias>div:nth-of-type(1){
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 100px;
+
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 50px;
+}
+
+@media (max-width: 500px) {
+    #parcerias>div:nth-of-type(1){
+        flex-direction: column;
+    }
 }
