--- a/styles/global.css
+++ b/styles/global.css
@@ -182,6 +182,38 @@ button {
     text-align: center;
 }
 
+.card-equipe{
+    background-color: white;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+
+    width: 260px;
+    height: 115px;
+    padding: 20px 30px;
+    border-radius: 15px;
+
+    font-family: 'Roboto';
+    font-size: 1.125rem;
+    
+    transition: all 300ms;
+}
+
+.card-equipe p:first-of-type{
+    color: var(--dark-lilac);
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.card-equipe p:last-of-type{
+    color: var(--dark-purple);
+    font-weight: 400;
+    line-height: 1.25rem;
+}
+
+.card-equipe:hover{
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
+    transform: translate(-5px, -5px);
+}
+
 @media (max-width: 1200px) {
     .card-horizontal {
         width: 310px;
