--- a/styles/home/parcerias.css
+++ b/styles/home/parcerias.css
@@ -6,6 +6,8 @@
 }
 
 #parcerias>p {
+    width: 70%;
+    
     font-family: 'Roboto';
     font-weight: 400;
     font-size: 1.375rem;
@@ -13,6 +15,7 @@
     color: var(--gray);
 
     text-align: center;
+    margin: auto;
     margin-bottom: 50px;
 }
 
