--- a/styles/quem-somos/equipe.css
+++ b/styles/quem-somos/equipe.css
@@ -60,3 +60,10 @@
         text-align: center;
     }
 }
+
+@media (max-width: 500px){
+    #equipe>p{
+        font-size: 1.125rem;
+    }
+    
+}
