--- a/styles/home/parcerias.css
+++ b/styles/home/parcerias.css
@@ -7,7 +7,7 @@
 
 #parcerias>p {
     width: 70%;
-    
+
     font-family: 'Roboto';
     font-weight: 400;
     font-size: 1.375rem;
@@ -36,4 +36,11 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 50px;
+}
+
+@media (max-width: 500px){
+    #parcerias>p{
+        font-size: 1.125rem;
+    }
+    
 }
