--- a/styles/transparencia/transparencia.css
+++ b/styles/transparencia/transparencia.css
@@ -1,25 +1,24 @@
 @import url("global.css");
 
-section { 
+#transparencia{ 
     background-color: var(--white);
     width: 100%;
     align-items: center;
-    padding: 2.5rem 10.93rem 2.5rem 10.93rem;
+    padding: 2.5rem 10.93rem;
 }
 
-h1 {
+#transparencia h1 {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 800;
     font-size: 4rem;
-    line-height: 98px;
+    line-height: 6.125rem;
     color:var(--medium-purple);
     margin-top: 2.5rem;
     margin-bottom: 3.125rem;
 }
 
-p{
-    width: 48.68rem;
+#transparencia p{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -27,19 +26,52 @@ p{
     line-height: 1.8rem;
     margin-bottom:  2.5rem;
     color: var(--gray);
+    text-align: justify;
+    width: 779px;
 }
 
-button {
+#transparencia button {
     border-radius: 50px;
     margin-bottom:  2.5rem;
 }
 
 .transparencia-botao{
-    margin-right: 3rem;
     background-color: var(--yellow-joy);
     color: white;
 }
 
 .transparencia-botao:hover {
     background-color: var(--medium-purple);
+}
+
+@media (max-width: 1200px) {
+    #transparencia{
+        align-items: center;
+    }
+
+    #transparencia p{
+        text-align: justify;
+        width: fit-content;
+    }
+}
+
+@media (max-width: 700px){
+    #transparencia{
+       align-items: center;
+       padding: 0rem 1.875rem;
+       text-align: center;
+    }
+
+    #transparencia h1{
+        font-size: 3rem;
+        text-align: center;
+        margin-top: 1.2rem;
+        margin-bottom: 2.2rem;
+    }
+
+    #transparencia p{
+        text-align: center;
+        font-size: 1rem;
+        width: fit-content;
+    }
 }
