--- a/styles/home/projetos.css
+++ b/styles/home/projetos.css
@@ -33,6 +33,7 @@
     color: white;
 }
 
+
 #projetos-conteudo h3{
     font-family: 'Poppins';
     font-style: normal;
@@ -70,5 +71,18 @@
     #projetos-conteudo img{
        width: 400px;
        height: 355px;
+    }
+
+    #projetos-conteudo h3{
+        text-align: center;
+    }
+
+    #projetos-conteudo p{
+        text-align: center;
+        width: fit-content;
+    }
+
+    #projetos-conteudo button{
+        margin: 0 auto;
     }
 }
