--- a/styles/como-ajudar/como_ajudar.css
+++ b/styles/como-ajudar/como_ajudar.css
@@ -71,6 +71,11 @@ p{
     align-items: center;
 }
 
+#doacoes a{
+    text-decoration: underline;
+    color: var(--gray);
+}
+
 #contato {
     display: flex;
     justify-content: center;
@@ -108,6 +113,10 @@ p{
 
     .botao-contribuinte{
         margin-bottom: 1rem;
+    }
+
+    #doacoes p{
+        text-align: center;
     }
 }
 
