--- a/styles/global.css
+++ b/styles/global.css
@@ -39,6 +39,13 @@ section {
     padding: 75px 0px;
 }
 
+h1{
+    font-family: 'Poppins';
+    font-weight: 800;
+    font-size: 4.0625rem;
+    color: var(--dark-purple);
+}
+
 /* estilizar text-align no css particular */
 h2 {
     font-family: 'Poppins';
@@ -231,6 +238,9 @@ button {
 }
 
 @media (max-width: 500px){
+    h1{
+        font-size: 3rem;
+    }
     h2 {
         font-size: 1.5rem;
     }
