--- a/styles/home/hero.css
+++ b/styles/home/hero.css
@@ -1,59 +1,85 @@
+@import url("global.css");
+
 #hero {
-  /* background: linear-gradient(180deg, var(--light-lilac), rgba(0, 0, 0, 0)); */
   background: var(--light-lilac);
   width: 100vw;
-  height: 100vh;
-}
-
-.container {
-  width: min(112rem, 100%);
-  max-width: 1200px;
-  margin: 0 auto;
-
-  margin-top: 6rem;
+  min-height: 100vh;
 
   display: flex;
+  align-items: center;
+}
+
+#hero div{
+  display: flex;
   flex-direction: column;
-  gap: 2.25rem;
-}
+  gap: 30px;
 
-.container h1 span {
-  font-size: 1.562rem;
-  font-weight: 500;
-  color: #000;
-}
+  width: 80%;
+  height: 500px;
+  margin: auto;
+  max-width: 1200px;
 
-.container h1 {
-  color: var(--dark-purple);
-  font-size: 4rem;
-}
-
-.container p {
-  max-width: 535px;
-  color: var(--gray);
-}
-
-#button-hero {
-  color: var(--medium-purple);
-  border-radius: 50px;
-  border: 2px solid var(--medium-purple);
-}
-
-#button-hero:hover {
-  color: var(--white)
-}
-
-.logo-hero {
-  display:inline-block;
   position: relative;
 }
 
-.logo-hero img {
+#hero h1>span:last-of-type{
+  line-height: 4.5rem;
+}
+
+#hero p {
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 1.125rem;
+
+  color: var(--gray);
+
+  max-width: 535px;
+}
+
+#hero h1>span:first-of-type {
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+#hero button {
+  border-radius: 50px;
+}
+
+#hero img{
   width: 450px;
-  height: 380px;
-  object-fit: cover;
 
   position: absolute;
-  top: -200px;
-  left: calc(100vw - 900px)
+  right: 0px;
+  bottom: 0px;
 }
+
+@media (max-width: 1300px){
+  #hero img{
+    width: 400px;
+  }
+}
+
+@media (max-width: 1200px){
+  #hero img{
+    width: 350px;
+  }
+}
+
+@media (max-width: 1100px){
+  #hero img{
+    display: none;
+  }
+}
+
+@media (max-width: 500px){
+  #hero h1>span:last-of-type{
+    line-height: 3.5rem;
+  }
+  #hero h1>span:first-of-type{
+    font-size: 1rem;
+    /* nao sei por que o line-height n ta funcionando */
+    line-height: 1.2rem;
+  }
+}
+
