--- a/styles/home/projetos.css
+++ b/styles/home/projetos.css
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 10rem;
 }
 
 #projetos-conteudo + #projetos-conteudo {
