--- a/styles/transparencia/transparencia.css
+++ b/styles/transparencia/transparencia.css
@@ -3,8 +3,11 @@
 #transparencia{ 
     background-color: var(--white);
     width: 100%;
-    align-items: center;
+    height: 100vh;
     padding: 2.5rem 10.93rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #transparencia h1 {
@@ -14,7 +17,6 @@
     font-size: 4rem;
     line-height: 6.125rem;
     color:var(--medium-purple);
-    margin-top: 2.5rem;
     margin-bottom: 3.125rem;
 }
 
