--- a/styles/quem-somos/hero_quem_somos.css
+++ b/styles/quem-somos/hero_quem_somos.css
@@ -26,17 +26,18 @@
 .descricao_quem_somos {
   display: flex;
   flex-direction: column;
-  gap: 4rem;
+  gap: 1rem;
 }
 
 .descricao_quem_somos p {
+  font-family: 'Roboto';
   color: var(--gray);
   font-size: 1.375rem;
   max-width: 625px;
 }
 
 .botao_quem_somos button {
-  margin-top: 2rem;
+  margin-top: 1rem;
   background-color: var(--yellow-joy);
   color: white;
 }
