--- a/styles/como-ajudar/como_ajudar.css
+++ b/styles/como-ajudar/como_ajudar.css
@@ -3,8 +3,15 @@
 section { 
     background-color: var(--white);
     width: 100%;
-    align-items: center;
     padding: 2.5rem 10.93rem 2.5rem 10.93rem;
+}
+
+#hero { 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--white);
+    height: 100vh;
 }
 
 h1 {
