--- a/styles/transparencia/transparencia.css
+++ b/styles/transparencia/transparencia.css
@@ -1,20 +1,22 @@
 @import url("global.css");
 
-#transparencia{ 
+#transparencia { 
     background-color: var(--white);
-    width: 100%;
-    height: 100vh;
-    padding: 2.5rem 10.93rem;
+    height: calc(100vh + 100px);
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    margin: 2rem;
+}
+
+#transparencia .imagem img{
+    width: 80%;
 }
 
 #transparencia h1 {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 800;
-    font-size: 4rem;
     line-height: 6.125rem;
     color:var(--medium-purple);
     margin-bottom: 3.125rem;
@@ -29,12 +31,13 @@
     margin-bottom:  2.5rem;
     color: var(--gray);
     text-align: justify;
-    width: 779px;
+    max-width: 779px;
 }
 
 #transparencia button {
     border-radius: 50px;
     margin-bottom:  2.5rem;
+    height: 4rem;
 }
 
 .transparencia-botao{
@@ -46,33 +49,37 @@
     background-color: var(--medium-purple);
 }
 
-@media (max-width: 1200px) {
-    #transparencia{
-        align-items: center;
+@media (max-width: 1500px) {
+    #transparencia {
+        flex-direction: column-reverse;
+        gap: 5rem;
+        text-align: center;
+    }
+
+    #transparencia .imagem img{
+        width: 300px;
     }
 
     #transparencia p{
-        text-align: justify;
+        font-size: 1rem;
         width: fit-content;
+        text-align: center;
     }
 }
 
 @media (max-width: 700px){
-    #transparencia{
-       align-items: center;
-       padding: 0rem 1.875rem;
-       text-align: center;
+    #transparencia {
+        margin: 5rem;
     }
 
     #transparencia h1{
-        font-size: 3rem;
+        font-size: 2.5rem;
         text-align: center;
         margin-top: 1.2rem;
         margin-bottom: 2.2rem;
     }
 
     #transparencia p{
-        text-align: center;
         font-size: 1rem;
         width: fit-content;
     }
