--- a/styles/quem-somos/hero_quem_somos.css
+++ b/styles/quem-somos/hero_quem_somos.css
@@ -32,7 +32,8 @@
 .descricao_quem_somos p {
   font-family: 'Roboto';
   color: var(--gray);
-  font-size: 1.375rem;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
   max-width: 625px;
 }
 
