--- a/styles/home/importancia.css
+++ b/styles/home/importancia.css
@@ -33,6 +33,7 @@
     font-family: 'Roboto';
     font-weight: 400;
     font-size: 1.125rem;
+    line-height: 1.8rem;
 
     width: 330px;
     text-align: right;
