--- a/styles/como-ajudar/como_ajudar.css
+++ b/styles/como-ajudar/como_ajudar.css
@@ -7,11 +7,16 @@ section {
 }
 
 #hero { 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     background-color: var(--white);
-    height: 100vh;
+    height: calc(100vh + 100px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+#hero .imagem img{
+    width: 80%;
 }
 
 h1 {
@@ -186,6 +191,10 @@ p{
 
     #hero div a {
         margin-right: 0rem;
+    }
+
+    #hero .imagem img{
+        width: 300px;
     }
 
     #doacoes-imposto-de-renda li{
