--- a/styles/quem-somos/missao_trabalho.css
+++ b/styles/quem-somos/missao_trabalho.css
@@ -49,7 +49,12 @@
         flex-direction: column-reverse;
         margin-top: 50px;
     }
-    
+}
+
+@media (max-width: 768px){
+    #missao-trabalho p{
+        font-size: 1rem;
+    }
 }
 
 @media (max-width: 600px) {
